<resources>
    <string name="app_name">Cricket App</string>
    <string name="cricket">Cricket-Mania</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="zero">0</string>
    <string name="six">** Six **</string>
    <string name="four">--Four--</string>
    <string name="three">3 Runs</string>
    <string name="two">2 Runs</string>
    <string name="one">1 Run</string>
    <string name="reset">Reset</string>
    <string name="out_players">Out Players</string>
    <string name="overs">Overs</string>
    <string name="out">Out</string>
</resources>